**************************************
*******  Fingertier ChangeLog  *******
**************************************

Version 0.2.0 - ???
---------------------------------
 * play list is cyclic
 * volume level gets saved
 * cover image file names can be configured
 * many bug fixes

Version 0.1.0 - 26 April 2009
---------------------------------
 * First release. Yeah! :-)
 * supports ogg, mp3 and flac
 * play/pause, previous, next
 * sorted playlist
 * volume control
 * tag and album cover display